Colab을 통해 생성됨

--- a/0625_python_defineandclass.ipynb
+++ b/0625_python_defineandclass.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyO/E2EtHNCQfWXHBIPcElA7",
+      "authorship_tag": "ABX9TyN00W9QjOvfWfz3Iawj4dBu",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1033,6 +1033,348 @@
         "id": "E82-ccPEtfPG"
       },
       "execution_count": 34,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# **def을 이용한 자율주행 코드 5가지**"
+      ],
+      "metadata": {
+        "id": "Vvco_Mgwxgqt"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**✅ 1. 장애물 회피 (Obstacle Avoidance)**"
+      ],
+      "metadata": {
+        "id": "cwE1byXrxs-8"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def avoid_obstacle(distance):\n",
+        "    if distance < 10:\n",
+        "        print(\"장애물 감지: 정지 또는 회피\")\n",
+        "    else:\n",
+        "        print(\"이동 가능\")\n",
+        "\n",
+        "# 테스트\n",
+        "avoid_obstacle(5)   # 장애물 감지\n",
+        "avoid_obstacle(15)  # 이동 가능"
+      ],
+      "metadata": {
+        "id": "MGYfFUNSxf2W"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**✅ 2. 차선 유지 (Lane Keeping)**"
+      ],
+      "metadata": {
+        "id": "gjTseuVWxzyH"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def lane_keeping(position):\n",
+        "    if position > 0:\n",
+        "        print(\"차선 오른쪽 이탈 → 왼쪽으로 조향\")\n",
+        "    elif position < 0:\n",
+        "        print(\"차선 왼쪽 이탈 → 오른쪽으로 조향\")\n",
+        "    else:\n",
+        "        print(\"차선 중앙 유지\")\n",
+        "\n",
+        "# 테스트\n",
+        "lane_keeping(2)   # 오른쪽 이탈\n",
+        "lane_keeping(-3)  # 왼쪽 이탈\n",
+        "lane_keeping(0)   # 중앙"
+      ],
+      "metadata": {
+        "id": "73BkSl_vx6Ca"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**✅ 3. 속도 조절 (Speed Control)**\n"
+      ],
+      "metadata": {
+        "id": "kiMfkUcRx7wF"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def control_speed(current_speed, speed_limit):\n",
+        "    if current_speed > speed_limit:\n",
+        "        print(\"속도 초과 → 감속\")\n",
+        "    elif current_speed < speed_limit:\n",
+        "        print(\"속도 부족 → 가속\")\n",
+        "    else:\n",
+        "        print(\"적정 속도 유지\")\n",
+        "\n",
+        "# 테스트\n",
+        "control_speed(60, 50)  # 감속\n",
+        "control_speed(40, 50)  # 가속\n",
+        "control_speed(50, 50)  # 유지"
+      ],
+      "metadata": {
+        "id": "Vl93B_VXyAhE"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**✅ 4. 신호등 인식 (Traffic Light Recognition)**"
+      ],
+      "metadata": {
+        "id": "UpmcYGGmyCjK"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def traffic_light_action(light_color):\n",
+        "    if light_color == \"red\":\n",
+        "        print(\"정지\")\n",
+        "    elif light_color == \"yellow\":\n",
+        "        print(\"감속\")\n",
+        "    elif light_color == \"green\":\n",
+        "        print(\"출발\")\n",
+        "    else:\n",
+        "        print(\"신호 불명확 → 정지\")\n",
+        "\n",
+        "# 테스트\n",
+        "traffic_light_action(\"red\")\n",
+        "traffic_light_action(\"yellow\")\n",
+        "traffic_light_action(\"green\")\n",
+        "traffic_light_action(\"blue\")  # 오류 시나리오"
+      ],
+      "metadata": {
+        "id": "eZfPdNLcyEyH"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**✅ 5. 충돌 위험 경고 (Collision Warning)**"
+      ],
+      "metadata": {
+        "id": "f0U7KomGyHJS"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def collision_warning(front_distance, speed):\n",
+        "    stopping_distance = speed * 2  # 간단한 계산식 (속도 x 2)\n",
+        "    if front_distance < stopping_distance:\n",
+        "        print(\"충돌 위험! 긴급 정지\")\n",
+        "    else:\n",
+        "        print(\"안전 주행 가능\")\n",
+        "\n",
+        "# 테스트\n",
+        "collision_warning(20, 15)  # 안전\n",
+        "collision_warning(20, 12)  # 위험"
+      ],
+      "metadata": {
+        "id": "Dcn4fsyuyLr3"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# **Class를 이용한 자율주행에 이용할 수 있는 코드 5가지**"
+      ],
+      "metadata": {
+        "id": "ipzGt-HMyPDk"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        " **✅ 1. 장애물 회피 클래스**"
+      ],
+      "metadata": {
+        "id": "iWguFZ-nygMB"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class ObstacleAvoidance:\n",
+        "    def __init__(self, distance):\n",
+        "        self.distance = distance\n",
+        "\n",
+        "    def check_obstacle(self):\n",
+        "        if self.distance < 10:\n",
+        "            print(\"장애물 감지: 정지 또는 회피\")\n",
+        "        else:\n",
+        "            print(\"이동 가능\")\n",
+        "\n",
+        "# 테스트\n",
+        "car = ObstacleAvoidance(5)\n",
+        "car.check_obstacle()"
+      ],
+      "metadata": {
+        "id": "Ma_5AQuUyVeB"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "✅ 2. 차선 유지 클래스"
+      ],
+      "metadata": {
+        "id": "o8pL8d1Yyl4f"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class LaneKeeping:\n",
+        "    def __init__(self, position):\n",
+        "        self.position = position\n",
+        "\n",
+        "    def adjust_steering(self):\n",
+        "        if self.position > 0:\n",
+        "            print(\"차선 오른쪽 이탈 → 왼쪽으로 조향\")\n",
+        "        elif self.position < 0:\n",
+        "            print(\"차선 왼쪽 이탈 → 오른쪽으로 조향\")\n",
+        "        else:\n",
+        "            print(\"차선 중앙 유지\")\n",
+        "\n",
+        "# 테스트\n",
+        "car = LaneKeeping(-2)\n",
+        "car.adjust_steering()"
+      ],
+      "metadata": {
+        "id": "V7t0Pgxjynap"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**✅ 3. 속도 제어 클래스**"
+      ],
+      "metadata": {
+        "id": "qEVq8YAKypId"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class SpeedControl:\n",
+        "    def __init__(self, current_speed, speed_limit):\n",
+        "        self.current_speed = current_speed\n",
+        "        self.speed_limit = speed_limit\n",
+        "\n",
+        "    def adjust_speed(self):\n",
+        "        if self.current_speed > self.speed_limit:\n",
+        "            print(\"속도 초과 → 감속\")\n",
+        "        elif self.current_speed < self.speed_limit:\n",
+        "            print(\"속도 부족 → 가속\")\n",
+        "        else:\n",
+        "            print(\"적정 속도 유지\")\n",
+        "\n",
+        "# 테스트\n",
+        "car = SpeedControl(60, 50)\n",
+        "car.adjust_speed()"
+      ],
+      "metadata": {
+        "id": "5mOs-Cblyq1t"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "✅ 4. 신호등 인식 클래스"
+      ],
+      "metadata": {
+        "id": "KwqgBfLtysto"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class TrafficLight:\n",
+        "    def __init__(self, light_color):\n",
+        "        self.light_color = light_color\n",
+        "\n",
+        "    def action(self):\n",
+        "        if self.light_color == \"red\":\n",
+        "            print(\"정지\")\n",
+        "        elif self.light_color == \"yellow\":\n",
+        "            print(\"감속\")\n",
+        "        elif self.light_color == \"green\":\n",
+        "            print(\"출발\")\n",
+        "        else:\n",
+        "            print(\"신호 불명확 → 정지\")\n",
+        "\n",
+        "# 테스트\n",
+        "light = TrafficLight(\"green\")\n",
+        "light.action()"
+      ],
+      "metadata": {
+        "id": "VPUUf12SysQ7"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "✅ 5. 충돌 경고 클래스"
+      ],
+      "metadata": {
+        "id": "_fj9NXSYyv85"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class CollisionWarning:\n",
+        "    def __init__(self, front_distance, speed):\n",
+        "        self.front_distance = front_distance\n",
+        "        self.speed = speed\n",
+        "\n",
+        "    def check_collision(self):\n",
+        "        stopping_distance = self.speed * 2\n",
+        "        if self.front_distance < stopping_distance:\n",
+        "            print(\"충돌 위험! 긴급 정지\")\n",
+        "        else:\n",
+        "            print(\"안전 주행 가능\")\n",
+        "\n",
+        "# 테스트\n",
+        "car = CollisionWarning(25, 10)\n",
+        "car.check_collision()"
+      ],
+      "metadata": {
+        "id": "mKuA4YhNyxUZ"
+      },
+      "execution_count": null,
       "outputs": []
     }
   ]
